Fixed stretching on Dashboard

--- a/css/styles.css
+++ b/css/styles.css
@@ -11,8 +11,13 @@
 html,
 body {
   width: 100%;
+  height:100%;
   /* border: 4px solid blue; */
 }
+body{
+  border: 2px solid green
+}
+
 * {
   box-sizing: border-box;
   margin: 0 !important;
@@ -153,4 +158,16 @@ p {
 }
 .fa-bell{
   float: right;
+}
+.min-100 {
+  min-height: 100%;
+}
+
+.porongo{
+  display: flex!important;
+  flex-direction: row!important;
+  max-height:100%;
+  flex:1!important;
+
+  /* min-height: 300px; */
 }
